--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./project/.env.dev
     depends_on:
       - board-db
+      - redis
   board-db:
     image: postgres:12-alpine
     volumes:
@@ -20,6 +21,25 @@ services:
       - POSTGRES_USER=board
       - POSTGRES_PASSWORD=board
       - POSTGRES_DB=board_dev
-
+  redis:
+    image: redis:alpine
+  celery:
+    build: ./project
+    command: celery -A core worker -l info
+    volumes:
+      - ./project/:/usr/src/project/
+    env_file:
+      - ./project/.env.dev
+    depends_on:
+      - redis
+  celery-beat:
+    build: ./project
+    command: celery -A core beat -l info
+    volumes:
+      - ./project/:/usr/src/project/
+    env_file:
+      - ./project/.env.dev
+    depends_on:
+      - redis
 volumes:
   postgres_data:
